# icare-nav

./: CMakeLists.txt  package.xml
config/: nav2_params.yaml
launch/: dwa_nav.launch.py  simple_nav.launch.py
src/: dwa_nav_node.cpp  simple_nav_node.cpp
